src/objects/Spend_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Spend Thresholds</relationshipLabel>
        <relationshipName>Spend_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spend_From__c</fullName>
        <label>Spend From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spend_To__c</fullName>
        <label>Spend To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Spend Threshold</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>From_cannot_be_bigger_than_Too</fullName>
        <active>true</active>
        <errorConditionFormula>Spend_From__c &gt;= Spend_To__c</errorConditionFormula>
        <errorMessage>From cannot be bigger than Too</errorMessage>
    </validationRules>
</CustomObject>